--- a/docker/nginx/005nowww.conf
+++ b/docker/nginx/005nowww.conf
@@ -1,7 +1,7 @@
 server {
         
     listen 80;
-    server_name example.com;
+    server_name 005.ru;
     rewrite ^/(.*) https://www.005.ru$request_uri permanent;
 
 
@@ -10,7 +10,7 @@ server {
 } 
 server {
     listen 443;
-    server_name example.com;
+    server_name 005.ru;
     rewrite ^/(.*) https://www.005.ru$request_uri permanent;
 
 
