--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -113,7 +113,7 @@ http {
     proxy_read_timeout 10s;
     # Сколько времени может пройти между двумя последовательными операциями записи данных на проксируемый сервер, прежде чем соединение будет закрыто
     proxy_send_timeout 10s;
-
+    
 #### СЖАТИЕ Gzip
     
     gzip                                on;
@@ -147,6 +147,8 @@ http {
         include /etc/nginx/default.d/*.conf;
 
         location / {
+            proxy_set_header Host $http_host;
+            proxy_pass      https://www.005.ru/; 
         }
 
         error_page 404 /404.html;
