--- a/docker/nginx/005.conf
+++ b/docker/nginx/005.conf
@@ -46,7 +46,9 @@ location / {
 #         proxy_set_header        X-Forwarded-Proto $scheme;
 #         proxy_intercept_errors  on;
 #         proxy_max_temp_file_size 0;
-        proxy_pass             https://www.005.ru/;
+       
+        proxy_set_header Host $http_host;
+        proxy_pass              http://web:8000;
     }
     
     
