--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,8 @@ urllib3 = "==1.25.11"
 Django = "==3.1.3"
 Pillow = "==8.0.1"
 PyJWT = "==1.7.1"
+djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.9"
