--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,13 @@ deploy to dev:
     refs:
       - main
   script:
-    - ls -lah
-    # - docker compose stop || true
-    # - docker compose rm || true
-    # - docker system prune || true
+    - rsync -av --no-perms --no-owner --no-group --exclude ".git*" $CI_PROJECT_DIR/ /data/project/
+    - ls -lah /data/project
+    - docker compose stop || true
+    - docker compose rm || true
+    - docker system prune || true
     - cd ./docker
+    - chmod -R 777 /data/project/
     - docker compose build
     - docker compose up -d
     - sleep 5
