new version nginx with certbot certificate

--- a/docker/nginx/005.conf
+++ b/docker/nginx/005.conf
@@ -1,39 +1,26 @@
 server {
-
-        listen 80;
-        server_name www.005.ru;
+        if ($host = 005.ru) {
         return 301 https://$host$request_uri;
-        
-#         location / {
-#         # expires                 -1;
-#         # proxy_ssl_name          $server_name;
-#         # proxy_set_header        X-Real-IP $remote_addr;
-#         # proxy_set_header        Host $server_name;
-#         # proxy_set_header        Connection "";
-#         # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-#         # proxy_set_header        X-Forwarded-Proto $scheme;
-#         # proxy_intercept_errors  on;
-#         # proxy_max_temp_file_size 0;
-#         proxy_pass              http://web:8000;
-#     }
-       
+        }
+	listen 80;
+        server_name 005.ru;
+        return 404; # managed by Certbot       
         access_log /var/log/nginx/http_access.log;
         error_log /var/log/nginx/http_error.log;
 }
 
 server {
 
-	listen 443 ssl http2;
-        server_name www.005.ru;
-#    client_max_body_size 10M;
+	listen 443;
+        server_name 005.ru;
 
- ###    # Configure SSL
-    ssl_certificate /etc/nginx/certs/005.crt;
+    ssl_dhparam /etc/nginx/certs/ssl-dhparams.pem; # managed by Certbot
+    ssl_certificate /etc/nginx/certs/005.pem;
     ssl_certificate_key /etc/nginx/certs/005.key;
-    ssl_stapling on;expires                 -1;
-    ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/nginx/certs/005.ocsp;
-    ssl_session_tickets on;
+#    ssl_stapling on;expires                 -1;
+#    ssl_stapling_verify on;
+#    ssl_trusted_certificate /etc/nginx/certs/005.ocsp;
+#    ssl_session_tickets on;
    ## #include snippets/ssl.conf;
    ## # Logging
 location / {
