--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -23,7 +23,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 #Copy certs/ /etc/nginx/certs
 COPY 005.conf /etc/nginx/conf.d/005.conf
-COPY 005nowww.conf /etc/nginx/conf.d/005nowww.conf
+COPY 005www.conf /etc/nginx/conf.d/005www.conf
 COPY certs/ /etc/nginx/certs
 
 # Expose ports
