--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3
 ENV PYTHONUNBUFFERED=1
 WORKDIR /005
 RUN apt-get update && apt-get install iputils-ping nano mc curl python3-django -y
-CMD pip3 install -r requirements.txt && pip3 install python-docx docxtpl whitenoise django-modeltranslation rest_framework && python3 manage.py runserver 0.0.0.0:8000
+CMD pip3 install -r requirements.txt && pip3 install python-docx docxtpl whitenoise django-modeltranslation djangorestframework && python3 manage.py runserver 0.0.0.0:8000
