--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-#asgiref==3.3.2
+asgiref==3.3.1
 certifi==2020.11.8
 cffi==1.14.3
 chardet==3.0.4
 cryptography==3.2.1
 defusedxml==0.6.0
-Django==3.2
+Django==3.1.3
 django-allauth==0.43.0
 django-crispy-forms==1.9.2
 django-filter==2.4.0
