--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3
+FROM python:3.8-buster
 ENV PYTHONUNBUFFERED=1
 WORKDIR /005
 RUN apt-get update && apt-get install iputils-ping nano mc curl python3-django -y
